fixed overflow

--- a/app/(application)/layout.module.css
+++ b/app/(application)/layout.module.css
@@ -2,5 +2,5 @@
    display: flex;
    flex-direction: column ;  
    height : 100dvh;
-
+overflow: hidden;
 }
