--- a/app/_components/AppNav.module.css
+++ b/app/_components/AppNav.module.css
@@ -9,7 +9,7 @@
     align-items: center;
     gap: 10px;
     padding: 20px clamp(20px, 10%, 20px);
-    position: fixed;
+    /* position: fixed; */
     width: 100vw;
     z-index: 10000;
     top: 0;
